test lien images

--- a/css/styles.css
+++ b/css/styles.css
@@ -90,32 +90,32 @@ padding-left: 10px;
 
 
 #acteur1 {
-   background-image: url('/images/Alec_Guinness.png');
+   background-image: url('images/Alec_Guinness.png');
    
 }
 
 #acteur2 {
-   background-image: url('/images/Anthony_Daniels.png');
+   background-image: url('images/Anthony_Daniels.png');
 }
 
 #acteur3 {
-   background-image: url('/images/Carrie_Fisher.png');
+   background-image: url('images/Carrie_Fisher.png');
 }
 
 #acteur4 {
-   background-image: url('/images/Harrison_Ford.png');
+   background-image: url('images/Harrison_Ford.png');
 }
 
 #acteur5 {
-   background-image: url('/images/Kenny_Baker.png');
+   background-image: url('images/Kenny_Baker.png');
 }
 
 #acteur6 {
-   background-image: url('/images/Mark_Hamill.png');
+   background-image: url('images/Mark_Hamill.png');
 }
 
 #acteur7 {
-   background-image: url('/images/Peter_Mayhew.png');
+   background-image: url('images/Peter_Mayhew.png');
    
 }
 
